--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ llama-cpp-python = "^0.2.20"
 llama-index = "0.8.25"
 langchain = "^0.0.345"
 accelerate = "^0.25.0"
+bitsandbytes = "^0.41.3"
+xformers = "^0.0.23"
+transformers = "^4.35.2"
+unstructured = "^0.11.2"
+markdown = "^3.5.1"
 
 
 [build-system]
