--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ python = "^3.10"
 atlassian-python-api = "^3.41.4"
 markdownify = "0.11.6"
 chromadb = "^0.4.18"
-pypdf = "^3.17.1"
 sentence-transformers = "^2.2.2"
 huggingface-hub = "^0.19.4"
 ctransformers = "^0.2.27"
@@ -27,6 +26,10 @@ xformers = "^0.0.23"
 transformers = "^4.35.2"
 unstructured = "^0.11.2"
 markdown = "^3.5.1"
+tiktoken = "^0.5.2"
+numexpr = "^2.8.8"
+faiss-cpu = "^1.7.4"
+pandas = "^2.1.4"
 
 
 [build-system]
